[gd_scene load_steps=10 format=3 uid="uid://bovyffourcl52"]

[ext_resource type="Theme" uid="uid://cehwwyyuxm3u1" path="res://assets/theme/game_theme.tres" id="1_u5wyd"]
[ext_resource type="Script" path="res://scripts/game_over_menu.gd" id="2_wht1n"]
[ext_resource type="Texture2D" uid="uid://swn7l1iite6u" path="res://assets/background/win_menu_background.jpg" id="3_6b1oo"]
[ext_resource type="Texture2D" uid="uid://5ffhuqvvqc7t" path="res://assets/theme/red_button_rectangle_depth_gradient.png" id="4_twraf"]
[ext_resource type="Texture2D" uid="uid://blg1tpdom2a0y" path="res://assets/theme/red_button_rectangle_flat.png" id="5_67ce2"]
[ext_resource type="Texture2D" uid="uid://c2f37xgmirgoa" path="res://assets/theme/red_button_rectangle_depth_flat.png" id="6_jfqbq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ebhb0"]
texture = ExtResource("4_twraf")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8yo86"]
texture = ExtResource("5_67ce2")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0mcem"]
texture = ExtResource("6_jfqbq")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = ExtResource("1_u5wyd")
script = ExtResource("2_wht1n")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.551682, 0.541146, 0.580186, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -290.0
offset_right = 290.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6b1oo")
expand_mode = 4
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = -48.0
offset_right = 115.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="TryAgain" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "TRY AGAIN"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxTexture_ebhb0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8yo86")
theme_override_styles/normal = SubResource("StyleBoxTexture_0mcem")
text = "MAIN MENU"

[connection signal="mouse_entered" from="VBoxContainer/TryAgain" to="." method="_on_try_again_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
